fix z-index in dialogs on map

--- a/css/dialog.css
+++ b/css/dialog.css
@@ -20,6 +20,7 @@ body.admin
 }
 
 .dialog.hidden {
+	z-index: 0;
 	opacity: 0;
 	top: 100px;
 }
